# public/docs/openapi.yaml
@@ -208,11 +208,11 @@ paths:
                 phone:
                   type: string
                   description: 'Must match the regex /^([0-9\s\-\+\(\)]*)$/. Must be at least 10 characters.'
-                  example: rnwteyxxfyfrbpclhktjwzlkdjgxsenyqjgwthqtxlqtmwvspk
+                  example: zzzzjvirlielcpiyzzwhvyhovgxflqthzdizbdczizpujmltfqsvxzwtgdbsmb
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: neil45@example.net
+                  example: arely72@example.com
                 password:
                   type: string
                   description: 'The password of the user.'
@@ -617,7 +617,7 @@ paths:
                 type:
                   type: string
                   description: ''
-                  example: quis
+                  example: sit
               required:
                 - type
       security: []
@@ -667,6 +667,54 @@ paths:
                 example: "{\n\"status\": true,\n\"statusCode\": 200,\n\"data\": {\n  \"id\": 1,\n  \"section1_title\": \"Experience Cinematic Magic Today! Subscribe to The Family Flix.\",\n  \"section1_description\": \"Are you ready to embark on an unparalleled entertainment journey? Join The Family Flix community now and unlock a world of cinematic wonders!\",\n  \"section1_background_img\": \"subscription/subscription-bg.png\",\n  \"section1_button_name\": \"Sign Up Today\",\n  \"subscribe_title\": \"Subscribe For Updates.\",\n  \"subscription_placeholder\": \"Enter your Email\",\n  \"button_name\": \"Subscribe\",\n  \"created_at\": \"2024-03-15T10:11:44.000000Z\",\n  \"updated_at\": \"2024-03-15T10:11:44.000000Z\"\n},"
       tags:
         - Cms
+      security: []
+  /api/v1/coupon-check:
+    post:
+      summary: 'Coupon check Api'
+      operationId: couponCheckApi
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n\"status\": false,\n\"message\": \"Coupon code is not valid for you\",\n\"status_code\": 200\n},"
+      tags:
+        - 'Coupon Check'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                coupon_code:
+                  type: string
+                  description: ''
+                  example: ab
+                plan_id:
+                  type: string
+                  description: ''
+                  example: officiis
+                plan_price:
+                  type: string
+                  description: ''
+                  example: aliquid
+                email:
+                  type: string
+                  description: 'This field is required when <code>phone</code> is not present.  Must be a valid email address.'
+                  example: ullrich.norwood@example.net
+                phone:
+                  type: string
+                  description: 'This field is required when <code>email</code> is not present.'
+                  example: null
+              required:
+                - coupon_code
+                - plan_id
+                - plan_price
       security: []
   /api/v1/customer/register:
     post:
@@ -762,7 +810,7 @@ paths:
                         items:
                           type: string
       tags:
-        - Endpoints
+        - Customer
       requestBody:
         required: true
         content:
@@ -777,11 +825,11 @@ paths:
                 phone:
                   type: string
                   description: 'Must match the regex /^([0-9\s\-\+\(\)]*)$/. Must be at least 10 characters.'
-                  example: sckrbtqkkjsikidujyqlklqloihsbbzvwtluenexbkscpgqhecgafazwikrtcpmkox
+                  example: zwtfrcqbhtctpqnzhzxjpnqpsetkhzckfiwwdbedgkmmnbizmoolpuehzwixtcerakw
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: malika80@example.com
+                  example: unikolaus@example.com
                 password:
                   type: string
                   description: 'The password of the user.'
@@ -869,7 +917,7 @@ paths:
                     type: string
                     example: 'Invalid user & Password!'
       tags:
-        - Endpoints
+        - Customer
       requestBody:
         required: true
         content:
@@ -945,7 +993,7 @@ paths:
                     type: string
                     example: Unauthorised
       tags:
-        - Endpoints
+        - 'Customer Profile '
   /api/v1/customer/account-update:
     post:
       summary: 'Update-Profile Api'
@@ -1006,7 +1054,7 @@ paths:
                         type: string
                         example: '2024-03-14T06:16:19.000000Z'
       tags:
-        - Endpoints
+        - 'Customer Profile '
       requestBody:
         required: true
         content:
@@ -1025,55 +1073,6 @@ paths:
               required:
                 - name
                 - email
-  /api/v1/customer/subscription/list:
-    post:
-      summary: 'Subscriptions Api'
-      operationId: subscriptionsApi
-      description: ''
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: false
-                  statusCode: 200
-                  message: 'No commission found!'
-                properties:
-                  status:
-                    type: boolean
-                    example: false
-                  statusCode:
-                    type: integer
-                    example: 200
-                  message:
-                    type: string
-                    example: 'No commission found!'
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: false
-                  statusCode: 401
-                  error: Unauthorised
-                properties:
-                  status:
-                    type: boolean
-                    example: false
-                  statusCode:
-                    type: integer
-                    example: 401
-                  error:
-                    type: string
-                    example: Unauthorised
-      tags:
-        - Endpoints
   /api/v1/contact-us:
     post:
       summary: 'Contact Api'
@@ -1116,7 +1115,7 @@ paths:
                 user_email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: lucinda94@example.net
+                  example: metz.mike@example.org
                 user_phone:
                   type: string
                   description: 'The phone of the user.'
@@ -1178,9 +1177,172 @@ paths:
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: bert.gerlach@example.org
+                  example: hannah.kutch@example.com
               required:
                 - email
+      security: []
+  /api/v1/payment-capture:
+    post:
+      summary: 'Payment capture Api'
+      operationId: paymentCaptureApi
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: true
+                  message: 'Payment captured successfully'
+                  status_code: 200
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: 'Payment captured successfully'
+                  status_code:
+                    type: integer
+                    example: 200
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: false
+                  message: 'Something went wrong'
+                  status_code: 401
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: 'Something went wrong'
+                  status_code:
+                    type: integer
+                    example: 401
+      tags:
+        - 'Payment Capture'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                emailId:
+                  type: string
+                  description: ''
+                  example: ab
+                first_name:
+                  type: string
+                  description: ''
+                  example: voluptas
+                last_name:
+                  type: string
+                  description: ''
+                  example: sed
+                country:
+                  type: string
+                  description: ''
+                  example: accusamus
+                house_name:
+                  type: string
+                  description: ''
+                  example: distinctio
+                detail_address:
+                  type: string
+                  description: ''
+                  example: ea
+                city:
+                  type: string
+                  description: ''
+                  example: deleniti
+                state:
+                  type: string
+                  description: ''
+                  example: odio
+                post_code:
+                  type: string
+                  description: ''
+                  example: natus
+                phone:
+                  type: string
+                  description: ''
+                  example: possimus
+                amount:
+                  type: string
+                  description: ''
+                  example: fugiat
+                paymentID:
+                  type: string
+                  description: ''
+                  example: rerum
+              required:
+                - emailId
+                - first_name
+                - last_name
+                - country
+                - house_name
+                - detail_address
+                - city
+                - state
+                - post_code
+                - phone
+                - amount
+                - paymentID
+      security: []
+  /api/v1/plans/show:
+    post:
+      summary: 'Plan-List Api'
+      operationId: planListApi
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n\"status\": true,\n  \"statusCode\": 200,\n  \"message\": \"Plan details found successfully\",\n  \"data\": {\n      \"plan\": [\n      {\n          \"id\": 1,\n          \"plan_name\": \"Starter\",\n          \"plan_details\": \"Welcome to our starter pack where 2 people can enjoy unlimited movies and shows.\",\n          \"plan_actual_price\": \"30\",\n          \"plan_offer_price\": \"25\",\n          \"button_text\": \"Subscribe\",\n          \"specification\": [\n              {\n                  \"id\": 1,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"1-2 Device Limit\"\n              },\n              {\n                  \"id\": 2,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Preminum Server\"\n              },\n              {\n                  \"id\": 3,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Full HD Available\"\n              },\n              {\n                  \"id\": 4,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Desktop, Mobile and TV App\"\n              },\n              {\n                  \"id\": 5,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Unlimited Movies and TV Shows\"\n              }\n          ]\n      },\n  ]\n }"
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: false
+                  statusCode: 401
+                  error:
+                    message:
+                      - 'No detail found!'
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  statusCode:
+                    type: integer
+                    example: 401
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: array
+                        example:
+                          - 'No detail found!'
+                        items:
+                          type: string
+      tags:
+        - 'Plan Listing'
       security: []
   /api/v1/product/unbeatable-variety:
     post:
@@ -1230,52 +1392,7 @@ paths:
                     type: string
                     example: 'Error message'
       tags:
-        - 'Listing APIs'
-      security: []
-  /api/v1/plans/show:
-    post:
-      summary: 'Plan-List Api'
-      operationId: planListApi
-      description: ''
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: "{\n\"status\": true,\n  \"statusCode\": 200,\n  \"message\": \"Plan details found successfully\",\n  \"data\": {\n      \"plan\": [\n      {\n          \"id\": 1,\n          \"plan_name\": \"Starter\",\n          \"plan_details\": \"Welcome to our starter pack where 2 people can enjoy unlimited movies and shows.\",\n          \"plan_actual_price\": \"30\",\n          \"plan_offer_price\": \"25\",\n          \"button_text\": \"Subscribe\",\n          \"specification\": [\n              {\n                  \"id\": 1,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"1-2 Device Limit\"\n              },\n              {\n                  \"id\": 2,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Preminum Server\"\n              },\n              {\n                  \"id\": 3,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Full HD Available\"\n              },\n              {\n                  \"id\": 4,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Desktop, Mobile and TV App\"\n              },\n              {\n                  \"id\": 5,\n                  \"plan_id\": 1,\n                  \"specification_name\": \"Unlimited Movies and TV Shows\"\n              }\n          ]\n      },\n  ]\n }"
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: false
-                  statusCode: 401
-                  error:
-                    message:
-                      - 'No detail found!'
-                properties:
-                  status:
-                    type: boolean
-                    example: false
-                  statusCode:
-                    type: integer
-                    example: 401
-                  error:
-                    type: object
-                    properties:
-                      message:
-                        type: array
-                        example:
-                          - 'No detail found!'
-                        items:
-                          type: string
-      tags:
-        - 'Listing APIs'
+        - Product
       security: []
   /api/v1/show/detail:
     post:
@@ -1325,7 +1442,7 @@ paths:
                     type: string
                     example: 'Error message'
       tags:
-        - 'Listing APIs'
+        - Product
       security: []
   /api/v1/movie/detail:
     post:
@@ -1375,7 +1492,7 @@ paths:
                     type: string
                     example: 'Error message'
       tags:
-        - 'Listing APIs'
+        - Product
       security: []
   /api/v1/kid/detail:
     post:
@@ -1425,8 +1542,57 @@ paths:
                     type: string
                     example: 'Error message'
       tags:
-        - 'Listing APIs'
+        - Product
       security: []
+  /api/v1/customer/subscription/list:
+    post:
+      summary: 'Subscriptions Api'
+      operationId: subscriptionsApi
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: false
+                  statusCode: 200
+                  message: 'No commission found!'
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  statusCode:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: 'No commission found!'
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: false
+                  statusCode: 401
+                  error: Unauthorised
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  statusCode:
+                    type: integer
+                    example: 401
+                  error:
+                    type: string
+                    example: Unauthorised
+      tags:
+        - Subscription
 tags:
   -
     name: Authentication
@@ -1435,11 +1601,26 @@ tags:
     name: Cms
     description: "\nAPIs for Cms"
   -
-    name: Endpoints
-    description: ''
+    name: 'Coupon Check'
+    description: "\nAPIs for Coupon Check"
+  -
+    name: Customer
+    description: "\nAPIs for Authentication"
+  -
+    name: 'Customer Profile '
+    description: "\nAPIs for Profile Details"
   -
     name: General
     description: "\nAPIs for General"
   -
-    name: 'Listing APIs'
+    name: 'Payment Capture'
+    description: "\nAPIs for Payment Capture"
+  -
+    name: 'Plan Listing'
+    description: "\nAPIs for Plan Listing"
+  -
+    name: Product
     description: "\nAPIs for Prduct Listing"
+  -
+    name: Subscription
+    description: "\nAPIs for Subscription List"
